--- a/components/navigation.html
+++ b/components/navigation.html
@@ -9,6 +9,9 @@
 			<li id="menu-item-199" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-199"><a
 					href="/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">一簡多繁辨析</a>
 			</li>
+			<li id="menu-item-199" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-199"><a
+					href="/category/%e4%b8%80%e7%b0%a1%e4%b8%80%e7%b9%81%e5%b0%8d%e6%87%89/">一簡一繁對應</a>
+			</li>
 			<li id="menu-item-198" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-198"><a
 					href="/category/%e6%bc%a2%e5%ad%97%e8%b6%a3%e8%ab%87/">漢字趣談</a></li>
 			<li id="menu-item-125" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-125"><a
@@ -24,6 +27,9 @@
 			href="/about/">關於</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-199"><a
 			href="/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">一簡多繁辨析</a>
+	</li>
+	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-199"><a
+			href="/category/%e4%b8%80%e7%b0%a1%e4%b8%80%e7%b9%81%e5%b0%8d%e6%87%89/">一簡一繁對應</a>
 	</li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-198"><a
 			href="/category/%e6%bc%a2%e5%ad%97%e8%b6%a3%e8%ab%87/">漢字趣談</a></li>
