--- a/components/search_script.html
+++ b/components/search_script.html
@@ -68,13 +68,31 @@
         }
     }
     function query_search(data, search_keyword) {
+        var keyword_keys = [];
         var title_keys = [];
         var description_keys = [];
+        var keyword_index =0;
         var title_index = 0;
         var description_index = 0;
         for (var key in data) {
             if ('article' == data[key]['type'] || 'page' == data[key]['type']) {
-                if (-1 != data[key]['title'].indexOf(search_keyword)) {
+                title_str = data[key]['title'];
+                pieces = title_str.split(search_keyword);
+                if(pieces.length > 1) {
+                    var found = false;
+                    for(var i = 0; i < pieces.length - 1; ++i) {
+                        if(-1 != pieces[i].split('」').pop().indexOf('「') &&
+                           -1 != pieces[i+1].split('「')[0].indexOf('」')) {
+                            keyword_keys[keyword_index++] = key;
+                            found = true;
+                            break;
+                        }
+                    }
+                    if (found){
+                        continue;
+                    }
+                // }
+                // if (-1 != title_str.indexOf(search_keyword)) {
                     title_keys[title_index++] = key;
                 }
                 else if (-1 != data[key]['description'].indexOf(search_keyword)) {
@@ -82,7 +100,7 @@
                 }
             }
         }
-        return title_keys.concat(description_keys);
+        return keyword_keys.concat(title_keys).concat(description_keys);
     }
     function select_search(data, search_keyword, page) {
         var keys = query_search(data, search_keyword);
