--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -88,6 +88,13 @@
             </p>
         </div>
     </div>
+    <div id="block-24" class="widget widget_block widget_text">
+        <div class="widget-content">
+            <p><a
+                    href="/%e3%80%8c%e4%b8%80%e7%b0%a1%e4%b8%80%e7%b9%81%e5%b0%8d%e6%87%89%e3%80%8d%e5%ad%b8%e7%bf%92%e7%b4%a2%e5%bc%95%e8%a1%a8/">「一簡一繁對應」學習索引表</a>
+            </p>
+        </div>
+    </div>
     <div id="block-22" class="widget widget_block widget_text">
         <div class="widget-content">
             <p><a
@@ -98,6 +105,9 @@
     <div id="block-18" class="widget widget_block widget_categories">
         <div class="widget-content">
             <ul class="wp-block-categories-list wp-block-categories">
+                <li class="cat-item cat-item-18 current-cat"><a aria-current="page"
+                        href="/category/%e4%b8%80%e7%b0%a1%e4%b8%80%e7%b9%81%e5%b0%8d%e6%87%89/">一簡一繁對應</a>
+                </li>
                 <li class="cat-item cat-item-18 current-cat"><a aria-current="page"
                         href="/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">一簡多繁辨析</a>
                 </li>
