--- a/front-end_files/css/fonts.css
+++ b/front-end_files/css/fonts.css
@@ -99,7 +99,7 @@
 
 @font-face {
   font-family: "edukai";
-  src: url("../fonts/edukai-4.0.ttf") format("truetype");
+  src: url("../fonts/eduKai.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
