--- a/front-end_files/css/fonts.css
+++ b/front-end_files/css/fonts.css
@@ -80,7 +80,7 @@
 
 @font-face {
   font-family: "ZhongYiSong";
-  src: url("../fonts/中易宋体.ttf") format("truetype");
+  src: url("../fonts/ZhongYiSong.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   text-shadow:
