--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -144,7 +144,7 @@
                         target="_blank" rel="noreferrer noopener nofollow">《異形詞辨析手冊》</a></li>
                 <li><a href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/補充資料/標準字與簡化字對照手冊.pdf"
                         target="_blank" rel="noreferrer noopener nofollow">《標準字與簡化字對照手冊》</a></li>
-                <li><a href="https://language.moe.gov.tw/material/list?u=9fd3b76d-d663-4508-bad1-a61d34e68850"
+                <li><a href="https://language.moe.gov.tw/material/list?u=9fd3b76d-d663-4508-bad1-a61d34e68850&category=71"
                         target="_blank" rel="noreferrer noopener nofollow">國字標準字體字形檔</a></li>
                 <li><a href="https://language.moe.gov.tw/001/Upload/FILES/SITE_CONTENT/M0001/HAU/haushou.htm"
                         target="_blank" rel="noreferrer noopener nofollow">《重訂標點符號手冊》</a></li>
